<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.doudou.passenger.ui.profile.profile.AuthenticationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_common_clickable_item"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginRight="@dimen/padding_edge_common"
        android:layout_marginTop="100dp">


        <EditText
            android:id="@+id/realName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:hint="@string/real_name"
            android:maxLines="1" />
    </RelativeLayout>

    <EditText
        android:id="@+id/idCard"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_common_clickable_item"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginRight="@dimen/padding_edge_common"
        android:layout_marginTop="30dp"
        android:hint="@string/id_card_number"
        android:maxLength="18"
        android:maxLines="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/submit"
        style="@style/Button.Primary"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginRight="@dimen/padding_edge_common"
        android:layout_marginTop="48dp"
        android:text="@string/submit"
        android:textColor="@color/white" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginTop="20dp"
        android:text="@string/authentication_tips"
        android:textSize="@dimen/text_size_hint" />
</LinearLayout>
