<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lexing.passenger.ui.main.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/shape_gray_border_bg"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/car_mall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/bottom_nav_car"
            android:gravity="center_horizontal"
            android:text="@string/car_mall" />

        <TextView
            android:id="@+id/car_finance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/bottom_nav_finance"
            android:gravity="center_horizontal"
            android:text="@string/car_finance" />

        <TextView
            android:id="@+id/pay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/bottom_nav_pay"
            android:gravity="center_horizontal"
            android:text="@string/pay" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="127dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/transparent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_common_clickable_item"
            android:layout_centerInParent="true"
            android:layout_marginLeft="36dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/call_car_immediately"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_common_clickable_item"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_gray_bg"
            android:gravity="center"
            android:text="@string/order"
            android:textColor="@color/white" />

        <CheckBox
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/checkbox_more"
            android:button="@null" />
    </RelativeLayout>
</RelativeLayout>
