<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lexing.passenger.ui.login.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_common_clickable_item"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginRight="@dimen/padding_edge_common"
        android:layout_marginTop="100dp">


        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="11"
            android:hint="@string/login_hint_input_mobile"
            android:inputType="number"
            android:maxLines="1" />

        <Button
            android:id="@+id/btn_identifying_code"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_trans_clickable"
            android:text="@string/get_identifying_code"
            android:textColor="@color/colorPrimary" />
    </RelativeLayout>


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_common_clickable_item"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginRight="@dimen/padding_edge_common"
        android:layout_marginTop="30dp"
        android:hint="@string/login_hint_input_password"
        android:inputType="number"
        android:maxLength="6"
        android:maxLines="1" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login"
        style="@style/Button.Primary"
        android:layout_marginLeft="@dimen/padding_edge_common"
        android:layout_marginRight="@dimen/padding_edge_common"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/section_margin"
        android:padding="8dp"
        android:textSize="@dimen/text_size_hint" />
</LinearLayout>
