<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pay_for_other"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_gray"
    android:orientation="vertical"
    tools:context="com.lexing.passenger.ui.profile.wallet.PayForOtherActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                style="@style/LineDivide"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/otherMobile"
                style="@style/TextView.Left"
                android:hint="@string/input_pay_for_other"
                android:inputType="number"
                android:maxLength="11"
                android:maxLines="1" />

            <View style="@style/LineEdge" />

            <View
                style="@style/LineDivide"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/moneyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_edge_common" />

                <EditText
                    android:id="@+id/editMoney"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/padding_edge_common"
                    android:layout_marginRight="@dimen/padding_edge_common"
                    android:background="@drawable/shape_gray_border_bg"
                    android:hint="@string/input_manual"
                    android:inputType="numberDecimal"
                    android:paddingLeft="15dp" />

                <TextView
                    android:id="@+id/tvPayTips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_edge_common"
                    android:drawableLeft="@drawable/ic_speaker"
                    android:drawablePadding="5dp"
                    android:text="@string/pay_tips"
                    android:textColor="#fea202"
                    android:textSize="@dimen/text_size_hint" />

                <View style="@style/LineEdge" />
            </LinearLayout>

            <View
                style="@style/LineDivide"
                android:layout_marginTop="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_common_clickable_item">

                <EditText
                    android:id="@+id/blessWord"
                    style="@style/TextView.Clickable"
                    android:hint="@string/pay_blessing_word" />

                <View
                    android:id="@+id/selectBlessWord"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <View
                style="@style/LineDivide"
                android:layout_marginTop="20dp" />


            <RadioGroup
                android:id="@+id/payRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/wxPay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_common_clickable_item"
                    android:layout_marginLeft="@dimen/padding_edge_common"
                    android:background="@drawable/select_pay_bg"
                    android:button="@null"
                    android:drawableLeft="@drawable/ic_wxpay"
                    android:drawablePadding="6dp"
                    android:text="@string/wx_pay" />

                <View
                    style="@style/LineEdge"
                    android:layout_marginLeft="@dimen/padding_edge_common" />

                <RadioButton
                    android:id="@+id/aliPay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_common_clickable_item"
                    android:layout_marginLeft="@dimen/padding_edge_common"
                    android:background="@drawable/select_pay_bg"
                    android:button="@null"
                    android:drawableLeft="@drawable/ic_alipay"
                    android:drawablePadding="6dp"
                    android:text="@string/ali_pay" />
            </RadioGroup>

            <View style="@style/LineEdge" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPay"
                style="@style/Button.Primary"
                android:layout_marginLeft="@dimen/padding_edge_common"
                android:layout_marginRight="@dimen/padding_edge_common"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_pay"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/payAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:textSize="@dimen/text_size_hint" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
