<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_gray"
    android:orientation="vertical"
    tools:context="com.doudou.passenger.ui.profile.wallet.PayActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:theme="@style/AppTheme.AppBarOverlayWhite">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_toolbar" />

            <TextView
                android:id="@+id/toolbar_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/padding_edge_common"
                android:maxLines="1"
                android:text="@string/bill"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_hint" />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary">

            <View
                android:id="@+id/centerView"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_centerVertical="true"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/centerView"
                android:layout_centerHorizontal="true"
                android:text="0.00"
                android:textColor="@color/white"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/centerView"
                android:layout_centerHorizontal="true"
                android:text="@string/total_balance"
                android:textColor="@color/white" />
        </RelativeLayout>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <View
                style="@style/LineDivide"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPayForOther"
                    style="@style/TextView.Clickable"
                    android:text="@string/pay_for_other"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_title" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/moneyRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_edge_common" />

                <EditText
                    android:id="@+id/editMoney"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="@dimen/padding_edge_common"
                    android:layout_marginRight="@dimen/padding_edge_common"
                    android:background="@drawable/shape_gray_border_bg"
                    android:hint="@string/input_manual"
                    android:inputType="numberDecimal"
                    android:paddingLeft="15dp" />

                <TextView
                    android:id="@+id/tvPayTips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_edge_common"
                    android:drawableLeft="@drawable/ic_speaker"
                    android:drawablePadding="5dp"
                    android:text="@string/pay_tips"
                    android:textColor="#fea202"
                    android:textSize="@dimen/text_size_hint" />

                <View style="@style/LineEdge" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center|left"
                android:paddingLeft="@dimen/padding_edge_common"
                android:text="充值所赠积分，系统将自动转入豆豆商城"
                android:textSize="@dimen/text_size_hint" />


            <RadioGroup
                android:id="@+id/payRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/wxPay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_common_clickable_item"
                    android:layout_marginLeft="@dimen/padding_edge_common"
                    android:background="@drawable/select_pay_bg"
                    android:button="@null"
                    android:drawableLeft="@drawable/ic_wxpay"
                    android:drawablePadding="6dp"
                    android:text="@string/wx_pay" />

                <View
                    style="@style/LineEdge"
                    android:layout_marginLeft="@dimen/padding_edge_common" />

                <RadioButton
                    android:id="@+id/aliPay"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_common_clickable_item"
                    android:layout_marginLeft="@dimen/padding_edge_common"
                    android:background="@drawable/select_pay_bg"
                    android:button="@null"
                    android:drawableLeft="@drawable/ic_alipay"
                    android:drawablePadding="6dp"
                    android:text="@string/ali_pay" />
            </RadioGroup>

            <View style="@style/LineEdge" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnPay"
                style="@style/Button.Primary"
                android:layout_marginLeft="@dimen/padding_edge_common"
                android:layout_marginRight="@dimen/padding_edge_common"
                android:layout_marginTop="20dp"
                android:text="@string/confirm_pay"
                android:textColor="@color/white" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/payAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:padding="8dp"
                android:textSize="@dimen/text_size_hint" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
